src/Components/FlipkartAllOffersCard/index.css
.FkAll-main {
  width: 44%;

  height: fit-content;
  border-radius: 5px;
  margin: 5px;
  color: #4ac99d;
  padding: 3px;

  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.3);
  background: white;
}
/* .ProductCard1-main:hover {
  -webkit-box-shadow: 10px -5px 14px -14px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 10px -5px 14px -14px rgba(0, 0, 0, 0.75);
  box-shadow: 10px -5px 14px -14px rgba(0, 0, 0, 0.75);
} */

